[gd_scene load_steps=4 format=3 uid="uid://btq26wwo8he0g"]

[ext_resource type="Script" uid="uid://dud0ieqk78wbo" path="res://scenes/ui/main_menu.gd" id="1_6jbdy"]
[ext_resource type="Texture2D" uid="uid://dkpgapvnrpq2o" path="res://art/beans.jpg" id="2_iwbf0"]
[ext_resource type="Texture2D" uid="uid://cau3dwjs2pkji" path="res://art/bill_foster.png" id="3_iwbf0"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6jbdy")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_iwbf0")
expand_mode = 1
stretch_mode = 6

[node name="BillFoster" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -122.0
offset_top = 107.0
offset_right = 941.0
offset_bottom = 939.0
grow_horizontal = 2
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_iwbf0")

[node name="MenuOptionsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -15.0
offset_right = 53.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="MenuOptionsContainer"]
layout_mode = 2
text = "START GAME"

[node name="OptionsButton" type="Button" parent="MenuOptionsContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="ExitButton" type="Button" parent="MenuOptionsContainer"]
layout_mode = 2
text = "EXIT"
